--- a/app/package.json
+++ b/app/package.json
@@ -12,14 +12,15 @@
   "devDependencies": {
     "@sveltejs/adapter-auto": "^2.0.0",
     "@sveltejs/kit": "^1.5.0",
+    "bulma": "^0.9.4",
+    "gh-pages": "^5.0.0",
+    "sass": "^1.62.0",
     "svelte": "^3.54.0",
     "svelte-check": "^3.0.1",
+    "svelte-preprocess": "^5.0.3",
     "tslib": "^2.4.1",
     "typescript": "^5.0.0",
-    "vite": "^4.3.0",
-    "sass": "^1.62.0",
-    "svelte-preprocess": "^5.0.3",
-    "bulma": "^0.9.4"
+    "vite": "^4.3.0"
   },
   "type": "module",
   "dependencies": {
