--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -29,7 +29,7 @@ jobs:
 
       - name: build
         env:
-          BASE_PATH: '/MomentumGameStudio.github.io'
+          BASE_PATH: '/app/'
         run: |
           npm run build
           touch build/.nojekyll
