--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -30,7 +30,7 @@ jobs:
 
       - name: build
         env:
-          BASE_PATH: '/app/'
+          BASE_PATH: '/app'
         run: |
           npm run build
           touch build/.nojekyll
